--- a/source/Popup/styles.scss
+++ b/source/Popup/styles.scss
@@ -2,20 +2,33 @@
 @import "../styles/reset";
 @import "../styles/variables";
 
+$gray: #f2f2f2;
+$githubBlue: #0969da;
+$githubRed: #cf222e;
+
 body {
   color: $black;
-}
-
-.MuiPaper-root {
-  box-shadow: none;
-  border-radius: 0;
+  font-size: 14px;
 }
 
 #popup {
-  // padding: 10px;
+  padding: 10px;
+  padding-bottom: 12px;
+
+  .MuiPaper-root {
+    border-radius: 0;
+    box-shadow: none;
+    border: 1px solid $gray;
+    width: auto;
+  }
 
   h1 {
-    font-size: 25px;
+    color: white;
+    font-weight: bold;
+    background-color: $githubBlue;
+    padding-left: 16px;
+    line-height: 2.2em;
+    margin-bottom: 10px;
   }
 
   .heading {
@@ -28,24 +41,11 @@ body {
     &:active,
     &:hover {
       background-color: unset;
-      border: 2px solid red;
+      border: 2px solid $githubRed;
     }
 
     &:nth-child(odd) {
-      background-color: #e5e5e5;
-    }
-
-
-
-
-    .level {
-      // color: green;
-    }
-
-    .heading-text {
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
+      background-color: $gray;
     }
   }
 
@@ -71,50 +71,5 @@ body {
 
   .level-6 {
     padding-left: 96px;
-  }
-
-  h2 {
-    font-size: 14px;
-  }
-
-  #options__button {
-    width: 50%;
-    background: green;
-    color: white;
-    font-weight: 500;
-    border-radius: 15px;
-    padding: 5px 10px;
-    justify-content: center;
-    margin: 20px auto;
-    cursor: pointer;
-    opacity: 0.8;
-    display: flex;
-  }
-
-  .links__holder {
-    ul {
-      display: flex;
-      margin-top: 1em;
-      justify-content: space-around;
-
-      li:nth-child(odd) {
-        background: lightgray;
-      }
-
-      li {
-        padding: 5px 15px;
-        font-weight: bold;
-
-        button {
-          border-radius: 25px;
-          font-size: 20px;
-          font-weight: 600;
-          padding: 10px 17px;
-          background-color: rgba(0, 0, 255, 0.7);
-          color: white;
-          cursor: pointer;
-        }
-      }
-    }
   }
 }
