--- a/source/Popup/styles.scss
+++ b/source/Popup/styles.scss
@@ -9,11 +9,22 @@ $githubRed: #cf222e;
 body {
   color: $black;
   font-size: 14px;
+  padding: 10px;
+  padding-bottom: 12px;
+}
+
+.loading-screen {
+  width: 100px;
+  font-style: italic;
+  color: darkslategray;
 }
 
 #popup {
-  padding: 10px;
-  padding-bottom: 12px;
+  .no-headings {
+    width: 200px;
+    font-style: italic;
+    color: darkslategray;
+  }
 
   .MuiPaper-root {
     border-radius: 0;
