feat: adds images

--- a/source/Popup/styles.scss
+++ b/source/Popup/styles.scss
@@ -103,4 +103,9 @@ body {
   .level-6 {
     padding-left: 96px;
   }
+
+  .is-fallback-text {
+    color: darkviolet;
+    font-style: italic;
+  }
 }
