--- a/source/Popup/styles.scss
+++ b/source/Popup/styles.scss
@@ -12,6 +12,7 @@ body {
   padding: 10px;
   padding-bottom: 12px;
   min-width: 200px;
+  width: 400px;
 }
 
 .loading-screen {
@@ -63,6 +64,7 @@ body {
     padding-top: 2px;
     padding-bottom: 2px;
     min-height: 28px;
+    white-space: normal;
 
     &:focus,
     &:active,
